[package]
name = "security_controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "security_controller"
path = "src/lib/mod.rs"
test = false
bench = false

[[bin]]
name = "security_controller"
test = false
bench = false

[dependencies]
panic-halt = "^1"
ufmt = "^0"
nb = "^1"
embedded-hal = "^1"

w5500-mqtt = "^0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "6de651a2303ad1f392fc628675af2372632df4fb"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.7"

[dependencies.either]
version = "1.6.1"
default-features = false

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
